# bike_rental_prediction

./: Docker-compose.yml  Dockerfile  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
entrypoints/: app_ui.py  inference.py  training.py
notebooks/: Modeling.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/app_ui/: app.py  utils.py
src/app_ui/assets/: styles.css
src/bike_rental/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/bike_rental/pipelines/: feature_eng.py  inference.py  nodes.py  training.py
